dynamix/force-app/main/default/objects/SMS_Template_Id__mdt/SMS_Template_Id__mdt.object-meta.xml
<CustomObject>
    <label>SMS Template Id</label>
    <pluralLabel>SMS Template Id&apos;s</pluralLabel>
</CustomObject>