dynamix/force-app/main/default/objects/SMS_Template_Id__mdt/fields/External_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Template_Id__c</fullName>
    <label>External Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>