dynamix/force-app/main/default/objects/SMS_Template_Id__mdt/fields/Salesforce_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Template_Id__c</fullName>
    <label>Salesforce Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>