dynamix/force-app/main/default/objects/SMS_Template_Id__mdt/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <label>SMS Template</label>
    <length>11000</length>
    <type>LongTextArea</type>
</CustomField>